[lesson5] Fixed from

--- a/lesson5_tutorial.ipynb
+++ b/lesson5_tutorial.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
    "source": [
     "plt.plot(t_list,x_tilde_norm_list)\n",
     "plt.title('(RR) Error exponential decay visualization (Moore-Penrose)')\n",
-    "plt.xlabel(\"Time [t]\")\n",
+    "plt.xlabel(\"Time [s]\")\n",
     "plt.ylabel(\"$||\\\\tilde{ \\\\bf{x} } (t) ||$\")\n",
     "plt.show()"
    ]
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
     "# (Optional) plot the data\n",
     "plt.plot(t_list,x_tilde_norm_list)\n",
     "plt.title('(RR) Error exponential decay visualization (damped pseudo-inverse)')\n",
-    "plt.xlabel(\"Time [t]\")\n",
+    "plt.xlabel(\"Time [s]\")\n",
     "plt.ylabel(\"$||\\\\tilde{ \\\\bf{x} } (t) ||$\")\n",
     "plt.show()"
    ]
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
     "\n",
     "plt.title('(RR) Error exponential decay visualization for multiple $\\\\eta$')\n",
     "plt.legend(loc=\"upper right\")\n",
-    "plt.xlabel(\"Time [t]\")\n",
+    "plt.xlabel(\"Time [s]\")\n",
     "plt.ylabel(\"$||\\\\tilde{ \\\\bf{x} } (t) ||$\")\n",
     "plt.show()"
    ]
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
     "\n",
     "plt.title('(RR) Control signal norm for different $\\\\eta$')\n",
     "plt.legend(loc=\"upper right\")\n",
-    "plt.xlabel(\"Time [t]\")\n",
+    "plt.xlabel(\"Time [s]\")\n",
     "plt.ylabel(\"$||u (t) ||$\")\n",
     "plt.show()"
    ]
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
     "\n",
     "plt.title('(PRR) Error exponential decay visualization for multiple $\\\\eta$')\n",
     "plt.legend(loc=\"upper right\")\n",
-    "plt.xlabel(\"Time [t]\")\n",
+    "plt.xlabel(\"Time [s]\")\n",
     "plt.ylabel(\"$||\\\\tilde{ \\\\bf{x} } (t) ||$\")\n",
     "plt.show()"
    ]
