--- a/lesson1_tutorial.ipynb
+++ b/lesson1_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A quick Python refresher\n",
+    "# L1 A quick Python refresher\n",
     "\n",
     "*License: CC-BY-NC-SA 4.0*\n",
     "\n",
