--- a/lesson2_tutorial.ipynb
+++ b/lesson2_tutorial.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Rigid Body Motion\n",
+        "# L2 Rigid Body Motion\n",
         "\n",
         "*License: CC-BY-NC-SA 4.0*\n",
         "\n",
