--- a/lesson3_tutorial.ipynb
+++ b/lesson3_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Forward Kinematics\n",
+    "# L3 Forward Kinematics\n",
     "\n",
     "*License: CC-BY-NC-SA 4.0*\n",
     "\n",
