--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Differential Kinematics\n",
+    "# L4 Differential Kinematics\n",
     "\n",
     "*License: CC-BY-NC-SA 4.0*\n",
     "\n",
