--- a/lesson5_tutorial.ipynb
+++ b/lesson5_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kinematic Control\n",
+    "# L5 Kinematic Control\n",
     "\n",
     "*License: CC-BY-NC-SA 4.0*\n",
     "\n",
