--- a/legacy/spatialmath/lesson2_tutorial.ipynb
+++ b/legacy/spatialmath/lesson2_tutorial.ipynb
@@ -10,9 +10,14 @@
         "\n",
         "*Author: Murilo M. Marinho (murilo.marinho@manchester.ac.uk)*\n",
         "\n",
-        "## Pre-requisites for the learner\n",
+        "## Pre-requisites\n",
         "The user of this notebook is expected to have prior knowledge in\n",
-        "- All the content and pre-requisites of lesson 1.\n",
+        "- All the content and pre-requisites of lesson 1 notebook.\n",
+        "\n",
+        "## I want to know more\n",
+        "- https://github.com/bdaiinstitute/spatialmath-python?tab=readme-ov-file\n",
+        "- https://github.com/bdaiinstitute/spatialmath-python/blob/master/notebooks/gentle-introduction.ipynb\n",
+        "- https://github.com/bdaiinstitute/spatialmath-python/blob/master/notebooks/introduction.ipynb\n",
         "\n",
         "## I found an issue\n",
         "Thank you! Please report it at https://github.com/MarinhoLab/OpenExecutableBooksRobotics/issues\n",
@@ -62,8 +67,8 @@
       "outputs": [],
       "source": [
         "%%capture\n",
-        "%pip install numpy\n",
-        "%pip install numpy --break-system-packages"
+        "%pip install roboticstoolbox-python\n",
+        "%pip install roboticstoolbox-python --break-system-packages"
       ]
     },
     {
@@ -115,6 +120,10 @@
       },
       "outputs": [],
       "source": [
+        "import numpy as np\n",
+        "\n",
+        "# In spatialmath, the translation is obtained with a single dimension, so we use that here.\n",
+        "# note that, using our definitions, these represent column vectors\n",
         "p = np.array([1.0, 2.0])\n",
         "\n",
         "print(f\"p={p}\")"
@@ -579,7 +588,7 @@
         "$$\\mymatrix{H}(\\myvec{t},\\mymatrix{R}) = \\left[\\begin{array}{ccc}\n",
         "             \\mymatrix{R} & \\myvec{t} \\\\\n",
         "             \\myvec{0} & 1 \n",
-        "        \\end{array}\\right].$$"
+        "        \\end{array}\\right],$$"
       ]
     },
     {
