--- a/lesson1_tutorial.ipynb
+++ b/lesson1_tutorial.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)"
    ]
@@ -106,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a = 10 and b = 5.\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'The value of a = {a} and b = {b}.')"
    ]
@@ -128,9 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=15\n"
+     ]
+    }
+   ],
    "source": [
     "c = a + b\n",
     "\n",
@@ -147,9 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=5\n"
+     ]
+    }
+   ],
    "source": [
     "c = a - b\n",
     "\n",
@@ -161,14 +193,22 @@
    "metadata": {},
    "source": [
     "#### Multiplication\n",
-    "$$c=a.b$$"
+    "$$c=ab$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=50\n"
+     ]
+    }
+   ],
    "source": [
     "c = a * b\n",
     "\n",
@@ -185,9 +225,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=2.0\n"
+     ]
+    }
+   ],
    "source": [
     "c = a / b\n",
     "\n",
@@ -204,13 +252,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=100000\n"
+     ]
+    }
+   ],
    "source": [
     "c = a ** b\n",
     "\n",
     "print(f'c={c}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Math functions\n",
+    "\n",
+    "For the following functions, we will need Python's built-in `math` module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import sqrt, exp, log, pi, sin, cos, tan"
    ]
   },
   {
@@ -228,8 +302,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import sqrt # Note that the import needs only, in general, be called once per script\n",
-    "\n",
     "c = sqrt(a)"
    ]
   },
@@ -255,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,9 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=2.154434690031884\n"
+     ]
+    }
+   ],
    "source": [
     "# n-th root using fractional exponent. Might be easier but most languages do not support a similar syntax\n",
     "c = a ** (1/n)\n",
@@ -292,11 +372,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=2.154434690031884\n"
+     ]
+    }
+   ],
    "source": [
-    "# n-th root using exp/log\n",
-    "from math import exp, log\n",
-    "\n",
     "c = exp(log(a)/n)\n",
     "\n",
     "print(f'c={c}')"
@@ -320,10 +405,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "phi=0.7853981633974483\n",
+      "s_phi=0.7071067811865475\n",
+      "c_phi=0.7071067811865476\n",
+      "t_phi=0.9999999999999999\n"
+     ]
+    }
+   ],
    "source": [
-    "from math import pi, sin, cos, tan\n",
-    "\n",
     "phi = pi/4.0\n",
     "s_phi = sin(phi)\n",
     "c_phi = cos(phi)\n",
@@ -348,29 +442,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%pip install numpy --break-system-packages\n",
-    "%pip install numpy"
+    "%pip install numpy \n",
+    "%pip install numpy --break-system-packages"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing the library\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "In this notebook we will import the module each time we use it, for clarity. However, for a regular Python script, you only need to do that once in general.\n",
-    "</div>"
+    "### Importing the library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,12 +482,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v=[[1 2]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "# Note the double [[]] to instanteate a vector with explicit row shape.\n",
     "v = np.array([[1, 2]])\n",
     "\n",
@@ -418,12 +514,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u=[[1]\n",
+      " [2]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "# Note that each row is defined by a single element within a [], while the whole vector is within an external []\n",
     "u = np.array([[1],\n",
     "              [2]])\n",
@@ -442,12 +545,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=5\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "c = np.vdot(u,u)\n",
     "\n",
     "print(f'c={c}')"
@@ -484,12 +593,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=[[-3  6 -3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "u3 = np.array([[1, 2, 3]])\n",
     "v3 = np.array([[4, 5, 6]])\n",
     "\n",
@@ -513,12 +628,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=2.23606797749979\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "c = np.linalg.norm(u)\n",
     "\n",
     "print(f'c={c}')"
@@ -543,12 +664,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A=[[1 2]\n",
+      " [3 4]],\n",
+      "\n",
+      "B=[[5 6]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "A = np.array([[1, 2], \n",
     "              [3, 4]])\n",
     "B = np.array([[5, 6], \n",
@@ -568,12 +699,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C=[[1 3]\n",
+      " [2 4]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "C = A.T\n",
     "\n",
     "print(f'C={C}')"
@@ -590,12 +728,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C=[[ 6  8]\n",
+      " [10 12]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "C = A + B\n",
     "\n",
     "print(f'C={C}')"
@@ -612,12 +757,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C=[[-4 -4]\n",
+      " [-4 -4]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "C = A - B\n",
     "\n",
     "print(f'C={C}')"
@@ -641,12 +793,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C=[[19 22]\n",
+      " [43 50]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "C = A @ B # Alternatively C = np.matmul(A,B), but that is too verbose\n",
     "\n",
     "print(f'C={C}')"
@@ -668,12 +827,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=[[1 2]\n",
+      " [2 4]],\n",
+      "\n",
+      "d=[[5]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "c = u @ v \n",
     "d = v @ u \n",
     "\n",
@@ -695,12 +863,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c=[[ 5]\n",
+      " [11]],\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "c = A @ u \n",
     "\n",
     "print(f'c={c},\\n')"
@@ -730,8 +906,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "D = np.diag([1, 2, 3])\n",
     "\n",
     "print(f'D={D}.')"
@@ -759,10 +933,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I_3=[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]].\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "I_3 = np.eye(3)\n",
     "\n",
     "print(f'I_3={I_3}.')"
@@ -792,34 +974,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O_3=[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]].\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "O_3 = np.zeros((3,3))\n",
     "\n",
     "print(f'O_3={O_3}.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# The Robotics Toobox for Python\n",
-    "In this unit, we will frequently rely on [`Robotics Toolbox for Python`](https://github.com/petercorke/robotics-toolbox-python), by Peter Corke and contributors.\n",
-    "\n",
-    "This powerful toolbox will allow to perform robotics operations. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "%pip install roboticstoolbox-python\n",
-    "%pip install roboticstoolbox-python --break-system-packages"
    ]
   }
  ],
