--- a/lesson2_tutorial.ipynb
+++ b/lesson2_tutorial.ipynb
@@ -57,13 +57,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [],
       "source": [
         "%%capture\n",
         "%pip install numpy\n",
         "%pip install numpy --break-system-packages"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Imports"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 74,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "from math import pi, sin, cos"
       ]
     },
     {
@@ -109,11 +126,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "p=[1. 2.]\n"
+          ]
+        }
+      ],
       "source": [
         "p = np.array([1.0, 2.0])\n",
         "\n",
@@ -140,14 +165,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "p=[10. 14.]\n"
+          ]
+        }
+      ],
       "source": [
-        "import numpy as np\n",
-        "\n",
         "p0 = np.array([1.0, 2.0])\n",
         "p1 = np.array([2.0, 3.0])\n",
         "p2 = np.array([3.0, 4.0])\n",
@@ -174,14 +205,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "p_=[0. 0.]\n"
+          ]
+        }
+      ],
       "source": [
-        "import numpy as np\n",
-        "\n",
         "p0 = np.array([1.0, 2.0])\n",
         "p1 = np.array([2.0, 3.0])\n",
         "p2 = np.array([3.0, 4.0])\n",
@@ -207,104 +244,38 @@
         "\n",
         "$$\\mymatrix{R}^{a}_{a} = \\mymatrix{I}_2.$$\n",
         "\n",
-        "We can directly instanteate SO(2) elements using `spatialmath`. When constructing a default element, it will hold the identity matrix, as shown below\n",
-        "\n",
-        "<div class=\"alert alert-block alert-info\">\n",
-        "It is important to know how to use <b>spatialmath</b>, as it will be handy throughout the course. However, you will also be evaluated on your ability to compute these transformations from scratch, without using <b>spatialmath</b>.\n",
-        "</div>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "import spatialmath as sm\n",
-        "\n",
-        "R = sm.SO2()\n",
-        "\n",
-        "print(f\"R={R}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "The `spatialmath` `SO2` is a class representing SO(2) and instances of it can be used conveniently with other libraries. We can check that the contents of the object represent a matrix created using `numpy` as follows."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "import numpy as np \n",
-        "\n",
-        "R_ = np.array([[1, 0], \n",
-        "               [0, 1]])\n",
-        "\n",
-        "if (R.R == R_).all():\n",
-        "    print(\"R.R and R_ are the same\")\n",
-        "else:\n",
-        "    print(\"R.R and R_ are not the same\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Note that \n",
-        "1. To extract the \"raw\" rotation matrix from the `spatialmath.SO2` object, we access the property `R`.\n",
-        "2. To compare matrix equality in numpy, we use the `(A == B).all()` syntax, where both `A` and `B` are numpy matrices."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Plotting SO(2) elements\n",
-        "The encapsulation of SO(2) elements in an object makes it easy for us to plot those elements, for example we can plot multiple SO(2) elements as shown below, \n",
+        "An element of SO(2) is simply a matrix with the correct properties, therefore we can define one directly in `numpy`. For\n",
         "\n",
         "$$R(\\theta) = \\left[\\begin{array}{ccc}\n",
         "             \\cos{\\theta} & -\\sin{\\theta} \\\\\n",
         "             \\sin{\\theta} & \\cos{\\theta} \n",
         "        \\end{array}\\right],$$\n",
         "\n",
-        "for instance with $\\mymatrix{R}_a \\triangleq \\mymatrix{R}(\\pi/4)$ and $\\mymatrix{R}_b \\triangleq \\mymatrix{R}(\\pi)$, we can get a visual representation as follows "
+        "when $\\theta = \\frac{\\pi}{2}$ we have"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "R=[[ 6.123234e-17 -1.000000e+00]\n",
+            " [ 1.000000e+00  6.123234e-17]]\n"
+          ]
+        }
+      ],
       "source": [
-        "import spatialmath as sm\n",
-        "import matplotlib.pyplot as plt\n",
-        "from math import pi\n",
+        "θ = pi/2\n",
+        "R = np.array([[cos(θ),-sin(θ)],\n",
+        "              [sin(θ), cos(θ)]])\n",
         "\n",
-        "fig = plt.figure() \n",
-        "\n",
-        "# Frame 0, with the default blue color\n",
-        "R.plot(frame='0', dims=[-2,2])\n",
-        "\n",
-        "# Frame 1, colored in green\n",
-        "Ra = sm.SO2(pi/4)\n",
-        "print(f\"Ra={Ra.R}\")\n",
-        "Ra.plot(frame='1', dims=[-2,2], color='green')\n",
-        "\n",
-        "# Frame 2, colored in black\n",
-        "Rb = sm.SO2(pi)\n",
-        "print(f\"Rb={Rb.R}\")\n",
-        "Rb.plot(frame='2', dims=[-2,2], color='black')"
+        "print(f\"R={R}\")"
       ]
     },
     {
@@ -321,64 +292,36 @@
         "             0            & 0             & 1\n",
         "        \\end{array}\\right],$$\n",
         "\n",
-        "where in Python we can define the identity transformation using `spatialmath` as follows"
+        "that for $\\theta = \\frac{\\pi}{2}$, $x = 0.1$, and $y = 0.2$, we have"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "H = [[ 6.123234e-17 -1.000000e+00  1.000000e-01]\n",
+            " [ 1.000000e+00  6.123234e-17  2.000000e-01]\n",
+            " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n"
+          ]
+        }
+      ],
       "source": [
-        "import spatialmath as sm\n",
-        "import matplotlib.pyplot as plt\n",
-        "from math import pi\n",
+        "θ = pi/2\n",
+        "x = 0.1\n",
+        "y = 0.2\n",
+        "H = np.array([[cos(θ),-sin(θ), x],\n",
+        "              [sin(θ), cos(θ), y],\n",
+        "              [0,      0,      1]])\n",
         "\n",
-        "H = sm.SE2()\n",
-        "print(f\"H = {H}\")\n",
         "\n",
-        "# If you need parts of the transformation \n",
-        "print(f\"Whose translation is t = {H.t}\")\n",
-        "print(f\"Whose rotation is R = {H.R}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Similarly to SO(2), SE(2) elements can be plotted. For instance, $\\mymatrix{H}_a \\triangleq \\mymatrix{H}(1,2,\\frac{\\pi}{2})$, $\\mymatrix{H}_b \\triangleq \\mymatrix{H}(-2,-3,\\frac{-\\pi}{4})$, we have"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "import spatialmath as sm\n",
-        "import matplotlib.pyplot as plt\n",
-        "from math import pi\n",
-        "\n",
-        "fig = plt.figure() \n",
-        "\n",
-        "# Frame 0, with the default blue color\n",
-        "H.plot(frame='0', dims=[-5,5])\n",
-        "\n",
-        "# Frame 1, colored in green\n",
-        "Ha = sm.SE2(1,2,pi/2)\n",
-        "print(f\"Ra={Ha.R}\")\n",
-        "print(f\"t_a={Ha.t}\")\n",
-        "Ha.plot(frame='1', dims=[-5,5], color='green')\n",
-        "\n",
-        "# Frame 2, colored in black\n",
-        "Hb = sm.SE2(-2,-3,-pi/4)\n",
-        "print(f\"Rb={Hb.R}\")\n",
-        "print(f\"t_b={Hb.t}\")\n",
-        "Hb.plot(frame='2', dims=[-5,5], color='black')"
+        "print(f\"H = {H}\")"
       ]
     },
     {
@@ -422,37 +365,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Rz=[[ 6.123234e-17 -1.000000e+00  0.000000e+00]\n",
+            " [ 1.000000e+00  6.123234e-17  0.000000e+00]\n",
+            " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n",
+            "Ry=[[ 6.123234e-17  0.000000e+00  1.000000e+00]\n",
+            " [ 0.000000e+00  1.000000e+00  0.000000e+00]\n",
+            " [-1.000000e+00  0.000000e+00  6.123234e-17]]\n",
+            "Rx=[[ 1.000000e+00  0.000000e+00  0.000000e+00]\n",
+            " [ 0.000000e+00  6.123234e-17 -1.000000e+00]\n",
+            " [ 0.000000e+00  1.000000e+00  6.123234e-17]]\n"
+          ]
+        }
+      ],
       "source": [
-        "import spatialmath as sm\n",
-        "import matplotlib.pyplot as plt\n",
-        "from math import pi\n",
+        "Rz = np.array([[cos(θ),-sin(θ), 0],\n",
+        "               [sin(θ), cos(θ), 0],\n",
+        "               [0,      0,      1]])\n",
         "\n",
-        "fig = plt.figure() \n",
+        "Ry = np.array([[ cos(θ), 0, sin(θ)],\n",
+        "               [      0, 1, 0],\n",
+        "               [-sin(θ), 0, cos(θ)]])\n",
         "\n",
-        "# A neutral rotation\n",
-        "R = sm.SO3()\n",
-        "R.plot(frame='0', dims=[-1,1], color=\"black\")\n",
-        "print(f\"R={R.R}\")\n",
+        "Rx = np.array([[1,      0,  0],\n",
+        "               [0, cos(θ), -sin(θ)],\n",
+        "               [0, sin(θ),  cos(θ)]])\n",
         "\n",
         "# A rotation about z\n",
-        "Rz = sm.SO3().Rz(-pi/4)\n",
-        "Rz.plot(frame='1', dims=[-1,1], color='blue')\n",
-        "print(f\"Rz={Rz.R}\")\n",
+        "print(f\"Rz={Rz}\")\n",
         "\n",
         "# A rotation about y\n",
-        "Ry = sm.SO3().Ry(pi/4)\n",
-        "Ry.plot(frame='2', dims=[-1,1], color='green')\n",
-        "print(f\"Ry={Ry.R}\")\n",
+        "print(f\"Ry={Ry}\")\n",
         "\n",
         "# A rotation about x\n",
-        "Rx = sm.SO3().Rx(pi/4)\n",
-        "Rx.plot(frame='3', dims=[-1,1], color='red')\n",
-        "print(f\"Rx={Rx.R}\")"
+        "print(f\"Rx={Rx}\")"
       ]
     },
     {
@@ -470,65 +424,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Rc=[[ 4.32978028e-17 -9.23879533e-01 -3.82683432e-01]\n",
+            " [ 4.32978028e-17  3.82683432e-01 -9.23879533e-01]\n",
+            " [ 1.00000000e+00  2.34326020e-17  5.65713056e-17]]\n"
+          ]
+        }
+      ],
       "source": [
-        "import spatialmath as sm\n",
-        "import matplotlib.pyplot as plt\n",
-        "from math import pi\n",
+        "θa = pi/4\n",
+        "Ra = np.array([[cos(θa),-sin(θa), 0],\n",
+        "               [sin(θa), cos(θa), 0],\n",
+        "               [0,      0,        1]])\n",
         "\n",
-        "fig = plt.figure() \n",
+        "θa_b = -pi/2\n",
+        "Ra_b = np.array([[ cos(θa_b), 0, sin(θa_b)],\n",
+        "                 [         0, 1, 0],\n",
+        "                 [-sin(θa_b), 0, cos(θa_b)]])\n",
         "\n",
-        "Ra = sm.SO3().Rx(pi/4)\n",
-        "Ra_b = sm.SO3().Ry(pi/4)\n",
-        "Rb_c = sm.SO3().Rz(-pi/4)\n",
+        "θb_c = pi/8\n",
+        "Rb_c = np.array([[1,         0,  0],\n",
+        "                 [0, cos(θb_c), -sin(θb_c)],\n",
+        "                 [0, sin(θb_c),  cos(θb_c)]])\n",
         "\n",
-        "Rc = Ra * Ra_b * Rb_c\n",
-        "Rc.plot(frame='0', dims=[-1,1], color='black')\n",
-        "print(f\"Rc={Rc.R}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "whereas a similar result using `numpy` is possible but we must be careful with the multiplication operator\n",
-        "<div class=\"alert alert-block alert-info\">\n",
-        "Note that for <b>spatialmath</b>, the regular <b>*</b> product is used, whereas in <b>numpy</b> matrix multiplications would be done with <b>@</b>.\n",
-        "</div>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "import spatialmath as sm\n",
-        "import numpy as np\n",
-        "from math import pi\n",
-        "\n",
-        "# Spatial math\n",
-        "Ra = sm.SO3().Rx(pi/4)\n",
-        "Ra_b = sm.SO3().Ry(pi/4)\n",
-        "Rb_c = sm.SO3().Rz(-pi/4)\n",
-        "Rc = Ra * Ra_b * Rb_c\n",
-        "\n",
-        "# Numpy, using the correct product \n",
-        "nRa = Ra.R\n",
-        "nRa_b = Ra_b.R\n",
-        "nRb_c = Rb_c.R\n",
-        "nRc = Ra.R @ Ra_b.R @ Rb_c.R\n",
-        "\n",
-        "if (Rc.R == nRc).all():\n",
-        "    print('The result is the same!')\n",
-        "else:\n",
-        "    print('The result is different.')\n"
+        "Rc = Ra @ Ra_b @ Rb_c\n",
+        "print(f\"Rc={Rc}\")"
       ]
     },
     {
@@ -537,32 +465,28 @@
       "source": [
         "## Inverse rotations in SO(3)\n",
         "\n",
-        "Inverse operations in SO(3) are analogous to the inversions in SO(2), which are simply matrix transpositions. This is simplified in `spatialmath` with the `inv` operator, as the same operator can be used for all structures.\n",
-        "\n",
-        "<div class=\"alert alert-block alert-info\">\n",
-        "Because of carryover effects of sequential fixed floating-point operations, many numbers that analytically are expected to be the same are not effectivelly the same after many operations. In those cases, comparisons with a level of tolerance such as <b>numpy.isclose</b> are more proper.\n",
-        "</div>"
+        "Inverse operations in SO(3) are analogous to the inversions in SO(2), which are simply matrix transpositions. "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The results are pretty much the same!\n"
+          ]
+        }
+      ],
       "source": [
-        "import spatialmath as sm\n",
-        "from math import pi\n",
+        "Ra_ = Rc @ Rb_c.T @ Ra_b.T \n",
         "\n",
-        "Ra = sm.SO3().Rx(pi/4)\n",
-        "Ra_b = sm.SO3().Ry(pi/4)\n",
-        "Rb_c = sm.SO3().Rz(-pi/4)\n",
-        "Rc = Ra * Ra_b * Rb_c\n",
-        "\n",
-        "Ra_ = Rc * Rb_c.inv() * Ra_b.inv() \n",
-        "\n",
-        "if np.isclose(Ra.R, Ra_.R).all():\n",
+        "if np.allclose(Ra, Ra_):\n",
         "    print('The results are pretty much the same!')\n",
         "else:\n",
         "    print('The results are too different.')\n"
@@ -588,7 +512,7 @@
       "source": [
         "## Sequential transformations\n",
         "\n",
-        "Using `spatialmath` we can also perform transformations using sequential multiplications, as for SO(3). Note also that we can verify the lack of commutativity on these transformations."
+        "We can also perform transformations using sequential multiplications, as for SO(3). Note also that we can verify the lack of commutativity on these transformations."
       ]
     },
     {
@@ -597,7 +521,24 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The results are far.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<Figure size 640x480 with 0 Axes>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "import spatialmath as sm\n",
         "import matplotlib.pyplot as plt\n",
@@ -606,24 +547,29 @@
         "fig = plt.figure() \n",
         "\n",
         "# An SE(3) translation\n",
-        "Ht_a = sm.SE3(1,2,3)\n",
+        "x = 1\n",
+        "y = 2\n",
+        "z = 3\n",
+        "θza = pi/4\n",
+        "Ha =  np.array([[cos(θza),-sin(θza), 0, 1],\n",
+        "                [sin(θza), cos(θza), 0, 2],\n",
+        "                [0,        0,        1, 3],\n",
+        "                [0,        0,        0, 1]])\n",
         "\n",
         "# An SE(3) rotation\n",
-        "Hr_a = sm.SE3.Rx(pi/2)\n",
+        "θxb = pi/4\n",
+        "Hb = np.array([[1, 0,        0,       0],\n",
+        "               [0, cos(θxb), -sin(θxb), 0],\n",
+        "               [0, sin(θxb),  cos(θxb), 0],\n",
+        "               [0, 0,        0,       1]])\n",
         "\n",
-        "# Frame 1, colored in green\n",
-        "Ha = Ht_a * Hr_a \n",
-        "print(f\"Ra={Ha.R}\")\n",
-        "print(f\"t_a={Ha.t}\")\n",
-        "Ha.plot(frame='1', dims=[-5,5], color='green')\n",
+        "# Ha then Hb\n",
+        "Hc = Ha @ Hb \n",
         "\n",
-        "# Frame 2, colored in black\n",
-        "Ha_ = Hr_a * Ht_a \n",
-        "print(f\"Ra_={Ha_.R}\")\n",
-        "print(f\"t_a_={Ha_.t}\")\n",
-        "Ha_.plot(frame='2', dims=[-5,5], color='black')\n",
+        "# Hb then Ha\n",
+        "Hc_ = Hb @ Ha \n",
         "\n",
-        "if np.isclose(Ha.A,Ha_.A).all():\n",
+        "if np.isclose(Hc,Hc_).all():\n",
         "    print('The results are close!')\n",
         "else:\n",
         "    print('The results are far.')"
@@ -647,11 +593,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 84,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The results are close!\n"
+          ]
+        }
+      ],
       "source": [
         "import spatialmath as sm\n",
         "import matplotlib.pyplot as plt\n",
