[lesson2] Removed the last mention of

--- a/lesson2_tutorial.ipynb
+++ b/lesson2_tutorial.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 222,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 223,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 224,
       "metadata": {
         "trusted": true
       },
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 225,
       "metadata": {
         "trusted": true
       },
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 226,
       "metadata": {
         "trusted": true
       },
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 227,
       "metadata": {
         "trusted": true
       },
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 228,
       "metadata": {
         "trusted": true
       },
@@ -365,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 229,
       "metadata": {
         "trusted": true
       },
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 230,
       "metadata": {
         "trusted": true
       },
@@ -470,7 +470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 231,
       "metadata": {
         "trusted": true
       },
@@ -517,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 232,
       "metadata": {
         "trusted": true
       },
@@ -588,12 +588,12 @@
         "             \\myvec{0} & 1 \n",
         "        \\end{array}\\right],$$\n",
         "\n",
-        "so it is important to remember to _never_ invert the matrix with regular inversion algorithms. Using the matricial properties leads to a simpler and faster inversion."
+        "so it is important to remember to _never_ invert the matrix with regular inversion algorithms. Using the matricial properties leads to a simpler and faster inversion. The only \"trick\" is to obtain the submatrix corresponding to the rotation matrix."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 238,
       "metadata": {
         "trusted": true
       },
@@ -602,27 +602,36 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The results are close!\n"
+            "Rc_inv=[[ 0.70710678  0.70710678  0.         -2.12132034]\n",
+            " [-0.5         0.5         0.70710678 -2.62132034]\n",
+            " [ 0.5        -0.5         0.70710678 -1.62132034]\n",
+            " [ 0.          0.          0.          1.        ]]\n",
+            "Rc @ Rc_inv = [[ 1.00000000e+00  0.00000000e+00 -2.29934717e-17  3.33066907e-16]\n",
+            " [ 0.00000000e+00  1.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
+            " [-2.29934717e-17  0.00000000e+00  1.00000000e+00  0.00000000e+00]\n",
+            " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
           ]
         }
       ],
       "source": [
-        "import spatialmath as sm\n",
-        "import matplotlib.pyplot as plt\n",
-        "from math import pi\n",
+        "# Extract Rc from Hc\n",
+        "Rc = Hc[0:3,0:3] # The 3x3 Rotation matrix\n",
+        "tc = Hc[0:3,3].reshape((3,1)) # The 3x1 translation vector at the forth column. Reshape it into a column vector.\n",
         "\n",
-        "Ht_a = sm.SE3(1,2,3)\n",
-        "Hr_a = sm.SE3.Rx(pi/2)\n",
-        "Ht_b = sm.SE3(-0.1,0.2,-0.3)\n",
-        "Hr_b = sm.SE3.Ry(-pi/4)\n",
+        "A =  Rc.T\n",
+        "B = -Rc.T@tc\n",
+        "C = np.array([0,0,0])\n",
+        "D = np.array([1])\n",
         "\n",
-        "Hb = Ht_a * Hr_a * Ht_b * Hr_b \n",
-        "Ht_a_ = Hb * Hr_b.inv() * Ht_b.inv() * Hr_a.inv()\n",
+        "# This is how you can use `np.block` to build a matrix like so\n",
+        "# | A B |\n",
+        "# | C D |\n",
+        "Hc_inv = np.block([[A, B], \n",
+        "                   [C, D]])\n",
         "\n",
-        "if np.isclose(Ht_a.A,Ht_a_.A).all():\n",
-        "    print('The results are close!')\n",
-        "else:\n",
-        "    print('The results are far.')"
+        "print(f\"Rc_inv={Hc_inv}\")\n",
+        "\n",
+        "print(f\"Rc @ Rc_inv = {Hc @ Hc_inv}\")"
       ]
     }
   ],
