[lesson3] Removing spatialmath

--- a/lesson2_tutorial.ipynb
+++ b/lesson2_tutorial.ipynb
@@ -517,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 232,
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
@@ -572,7 +572,7 @@
         "if np.isclose(Hc,Hc_).all():\n",
         "    print('The results are close!')\n",
         "else:\n",
-        "    print('The results are far.')"
+        "    print('The results are far, therefore the operation is not commutative')"
       ]
     },
     {
