[lesson3] Removing the mention of  from the section header

--- a/lesson3_tutorial.ipynb
+++ b/lesson3_tutorial.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 DoF planar robot (RR) -- Calculating its forward kinematics using numpy and spatialmath\n",
+    "# 2 DoF planar robot (RR) -- Calculating its forward kinematics using numpy\n",
     "\n",
     "![4A.png](attachment:4A.png)\n",
     "\n",
