[lesson3] Fixing headers

--- a/lesson3_tutorial.ipynb
+++ b/lesson3_tutorial.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 DoF planar robot (RR) -- Calculating its forward kinematics using numpy\n",
+    "# 2 DoF planar robot (RR)\n",
     "\n",
     "![4A.png](attachment:4A.png)\n",
     "\n",
@@ -106,13 +106,13 @@
     "$$\\mymatrix{H}_{A2}( \\theta_{A0}, l_{A0},\\theta_{A1},l_{A1}) \\in SE(3),$$\n",
     "given that the pose of $\\mathcal{F}_{A0}$ is $SE(3) \\ni \\mymatrix{H}_{A0} \\triangleq \\mymatrix{I}_4$.\n",
     "\n",
-    "## Step 1: Understanding the problem\n",
+    "## Understanding the problem\n",
     "\n",
     "There is not much we can do without understanding what is being asked. In this regard, it is important to read and understand as much as possible the content already given. The programming part is extremely simple after the math is understood.\n",
     "\n",
     "As described, the problem in question is that, for each joint transformation, we have a rotation followed by a translation.\n",
     "\n",
-    "## Step 2: Calculating the first joint transformation\n",
+    "## The transformation of the first joint\n",
     "\n",
     "$$\\myvec H_{A1}^{A0}\\left(\\theta_{A0}\\right)\t=\\begin{bmatrix}\\mymatrix R\\left(\\theta_{A0}\\right) & 0\\\\\n",
     "\\myvec 0 & 1\n",
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Calculating the second joint transformation\n",
+    "## The transformation of the second joint \n",
     "\n",
     "The second joint is, aside from parameters, the same as the first. Hence, the *relative* transformation is calculated similarly\n",
     "\n",
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Calculating final transformations\n",
+    "## The final transformation\n",
     "\n",
     "The problem is quite simple to solve after the relative transformations are known. \n",
     "\n",
