[dq1] Fix typo mentioning MATLAB.

--- a/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
+++ b/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
@@ -32,18 +32,18 @@
     "Before we begin learning DQ Robotics, it is important to understand some basics of Python programming.\n",
     "\n",
     "<a name=\"H_CC3F55EF\"></a>\n",
-    "## MATLAB scripts\n",
+    "## Python scripts\n",
     "\n",
-    "This is a Jupyter notebook with extension [.ipynb]. In general, Python scripts will have the extension [.py].\n",
-    "\n",
-    "\n",
-    "A script, such as the [hello_world.py], is the usual programming method of Python.\n",
+    "This is a Jupyter notebook with extension `.ipynb`. In general, Python scripts will have the extension `.py`.\n",
     "\n",
     "\n",
-    "A Jupyter notebook, such as this one [lesson_dq1_python_basics.ipynb], is a file in which we can write explanations together with code.\n",
+    "A script, such as the `hello_world.py`, is the usual programming method of Python.\n",
     "\n",
     "\n",
-    "The Python kernel will execute each line of your script, in order. Python will ignore any line that stards with #. That can be used to add comments to your scripts, as follows\n"
+    "A Jupyter notebook, such as this one `lesson_dq1_python_basics.ipynb`, is a file in which we can write explanations together with code.\n",
+    "\n",
+    "\n",
+    "The Python kernel will execute each line of your script, in order. Python will ignore any line that stards with `#`. That can be used to add comments to your scripts, as follows\n"
    ]
   },
   {
@@ -326,7 +326,7 @@
     "<a name=\"H_765559ED\"></a>\n",
     "## Trigonometric operations with real numbers\n",
     "\n",
-    "In Python, we can easily use $\\pi \\;$ and some important trigonometric functions from the module `math`. For example, $\\pi$ is defined as \"pi\". We can show its first 16 significant digits as\n"
+    "In Python, we can easily use $\\pi$ and some important trigonometric functions from the module `math`. For example, $\\pi$ is defined as \"pi\". We can show its first 16 significant digits as\n"
    ]
   },
   {
