[dqrobotics] Removing MATLAB headers, TOCs, and fixing to Python.

--- a/dqrobotics/lesson5/lesson_dq5_robot_control_basics_part1.ipynb
+++ b/dqrobotics/lesson5/lesson_dq5_robot_control_basics_part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function __init__ in module one_dof_planar_robot:\n",
+      "\n",
+      "__init__(self, l1)\n",
+      "    Initialize self.  See help(type(self)) for accurate signature.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from one_dof_planar_robot import OneDofPlanarRobot\n",
     "help(OneDofPlanarRobot.__init__)"
@@ -166,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,18 +283,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function ikm_tx in module one_dof_planar_robot:\n",
+      "\n",
+      "ikm_tx(self, tx)\n",
+      "    fkm calculates the IKM for the 1-DoF planar robot using the \n",
+      "    desired x-axis translation.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(OneDofPlanarRobot.ikm_tx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function ikm_ty in module one_dof_planar_robot:\n",
+      "\n",
+      "ikm_ty(self, ty)\n",
+      "    fkm calculates the IKM for the 1-DoF planar robot using the \n",
+      "    desired y-axis translation.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(OneDofPlanarRobot.ikm_ty)"
    ]
@@ -297,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,18 +431,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function translation_jacobian in module one_dof_planar_robot:\n",
+      "\n",
+      "translation_jacobian(self, theta1)\n",
+      "    Calculates the translation Jacobian of the 1-DoF planar\n",
+      "    robot.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(OneDofPlanarRobot.translation_jacobian)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corresponding end effector velocity\n"
+     ]
+    }
+   ],
    "source": [
     "# Length\n",
     "l1 = 1\n",
@@ -426,9 +485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_dot = [-0.00302661 -0.35998728 -0.        ]\n"
+     ]
+    }
+   ],
    "source": [
     "t_dot = Jt*theta1_dot\n",
     "print(f\"t_dot = {t_dot}\")"
@@ -469,7 +536,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_dot =  - 0.19i + 0.74j - 0.71k\n"
+     ]
+    }
+   ],
    "source": [
     "# Length\n",
     "l1 = 1\n",
@@ -481,11 +556,11 @@
     "theta1 = -2.27\n",
     "\n",
     "# vx, in m/s\n",
-    "vx =-0.19\n",
+    "vx = -0.19\n",
     "# vy, in m/s\n",
-    "vy =0.74\n",
+    "vy = 0.74\n",
     "# vz, in m/s\n",
-    "vz =-0.71\n",
+    "vz = -0.71\n",
     "\n",
     "# Compose the end effector velocity into a pure quaternion\n",
     "t_dot = DQ([vx, vy, vz])\n",
@@ -494,9 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corresponding joint velocity\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Get the translation jacobian, based on theta\n",
@@ -508,9 +591,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theta_dot = [-0.62168767]\n"
+     ]
+    }
+   ],
    "source": [
     "from dqrobotics.utils.DQ_LinearAlgebra import pinv\n",
     "\n",
@@ -556,7 +647,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running control loop for 251 iterations.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -580,11 +679,11 @@
     "\n",
     "## Desired task-space velocity\n",
     "# vx [m/s]\n",
-    "vx =3.29\n",
+    "vx = 3.29\n",
     "# vy [m/s]\n",
-    "vy =3.7\n",
+    "vy = 3.7\n",
     "# vz [m/s]\n",
-    "vz =3.5\n",
+    "vz = 3.5\n",
     "\n",
     "# Compose the end effector velocity into a pure quaternion\n",
     "td_dot = DQ([vx, vy, vz])\n",
@@ -600,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +926,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -841,7 +940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
