--- a/dqrobotics/lesson7/lesson_dq7_robot_control_basics_part3.ipynb
+++ b/dqrobotics/lesson7/lesson_dq7_robot_control_basics_part3.ipynb
@@ -3,63 +3,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
-    "% (C) Copyright 2020-2025 Murilo Marques Marinho (murilomarinho@ieee.org)\n",
-    "%\n",
-    "%     This file is licensed in the terms of the\n",
-    "%     Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)\n",
-    "%     license.\n",
-    "%\n",
-    "% Derivative work of:\n",
-    "% https://github.com/dqrobotics/learning-dqrobotics-in-matlab/tree/master/robotic_manipulators\n",
-    "% Contributors to this file:\n",
-    "%     Murilo Marques Marinho (murilomarinho@ieee.org)\n",
-    "clear all;\n",
-    "close all;"
+    "%%capture\n",
+    "'''\n",
+    "(C) Copyright 2020-2025 Murilo Marques Marinho (murilomarinho@ieee.org)\n",
+    "\n",
+    "     This file is licensed in the terms of the\n",
+    "     Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)\n",
+    "     license.\n",
+    "\n",
+    " Derivative work of:\n",
+    " https://github.com/dqrobotics/learning-dqrobotics-in-matlab/tree/master/robotic_manipulators\n",
+    " Contributors to this file:\n",
+    "     Murilo Marques Marinho (murilomarinho@ieee.org)\n",
+    "'''"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"T_00CD409F\"></a>\n",
-    "# <span style=\"color:rgb(213,80,0)\">Robot Control Basics using DQ Robotics - Part 3</span>\n",
-    "<a name=\"beginToc\"></a>\n",
-    "## Table of Contents\n",
-    "[Robot Control Basics using DQ Robotics - Part 3](#T_00CD409F)\n",
+    "# Robot Control Basics using DQ Robotics - Part 3\n",
     "\n",
-    "&emsp;[Introduction](#H_8AFFA90E)\n",
-    "\n",
-    "&emsp;[Notation](#H_D4ECB91A)\n",
-    "\n",
-    "&emsp;[Robot definition](#H_C7A69651)\n",
-    "\n",
-    "&emsp;[Robot controller](#H_5AB990BD)\n",
-    "\n",
-    "&emsp;[Task-space singularities](#H_08B34616)\n",
-    "\n",
-    "&emsp;&emsp;[Matrix rank and singularities](#H_7241FE9B)\n",
-    "\n",
-    "&emsp;&emsp;[A quick review on the SVD-based inverse for full-rank matrices](#H_9FDB8EB8)\n",
-    "\n",
-    "&emsp;&emsp;[A quick review on the SVD-based inverse for singular matrices](#H_EFF1B965)\n",
-    "\n",
-    "&emsp;&emsp;[So, after all this, what are task-space singularities, then?](#H_76F44C17)\n",
-    "\n",
-    "&emsp;&emsp;[I see, but what is the problem?](#H_8D4B3DED)\n",
-    "\n",
-    "&emsp;&emsp;[Ok, I still don't understand. What is the problem?](#H_725A6619)\n",
-    "\n",
-    "&emsp;[Damped pseudo-inverse](#H_B1A4D228)\n",
-    "\n",
-    "&emsp;&emsp;[Damped pseudo-inverse and singularity robustness](#H_90195E7B)\n",
-    "\n",
-    "[Homework](#T_799C3A33)\n",
-    "\n",
-    "<a name=\"endToc\"></a>\n",
-    "<a name=\"H_8AFFA90E\"></a>\n",
     "## Introduction\n",
     "\n",
     "In the last lesson, you learned how model robotic manipulators parameterized using the DH parameters. You also learned how to use a basic controller based on the pseudo-inverse of the task Jacobian.\n",
