--- a/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
+++ b/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
@@ -6,88 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% (C) Copyright 2020-2025 Murilo Marques Marinho (murilomarinho@ieee.org)\n",
-    "%\n",
-    "%     This file is licensed in the terms of the\n",
-    "%     Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)\n",
-    "%     license.\n",
-    "%\n",
-    "% Derivative work of:\n",
-    "% https://github.com/dqrobotics/learning-dqrobotics-in-matlab/tree/master/robotic_manipulators\n",
-    "% Contributors to this file:\n",
-    "%     Murilo Marques Marinho (murilomarinho@ieee.org)\n",
-    "%     - 2020/4: First version\n",
-    "%     - 2023/1: Updated from 'min' to 'arg min', fixed a few typos.\n",
-    "settingsObj = settings;\n",
-    "settingsObj.matlab.editor.AllowFigureAnimation.TemporaryValue = 1;"
+    "%%capture\n",
+    "'''\n",
+    "(C) Copyright 2020-2025 Murilo Marques Marinho (murilomarinho@ieee.org)\n",
+    "\n",
+    "     This file is licensed in the terms of the\n",
+    "     Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)\n",
+    "     license.\n",
+    "\n",
+    " Derivative work of:\n",
+    " https://github.com/dqrobotics/learning-dqrobotics-in-matlab/tree/master/robotic_manipulators\n",
+    " Contributors to this file:\n",
+    "     Murilo Marques Marinho (murilomarinho@ieee.org)\n",
+    "'''"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"T_00CD409F\"></a>\n",
-    "# <span style=\"color:rgb(213,80,0)\">Optimization-based Robot Control</span>\n",
-    "<a name=\"beginToc\"></a>\n",
-    "## Table of Contents\n",
-    "[Optimization-based Robot Control](#T_00CD409F)\n",
+    "# Optimization-based Robot Control\n",
     "\n",
-    "&emsp;[Introduction](#H_8AFFA90E)\n",
-    "\n",
-    "&emsp;[Notation](#H_D4ECB91A)\n",
-    "\n",
-    "&emsp;[Robot definition](#H_C7A69651)\n",
-    "\n",
-    "&emsp;[A brief review of quadratic optimization](#H_5AB990BD)\n",
-    "\n",
-    "&emsp;&emsp;[Unconstrained quadratic optimization](#H_9713527E)\n",
-    "\n",
-    "&emsp;&emsp;[Quadratic programming](#H_0D416C91)\n",
-    "\n",
-    "&emsp;[The damped pseudo-inverse as the solution of an unconstrained quadratic optimization problem](#H_08B34616)\n",
-    "\n",
-    "&emsp;[Joint limits](#H_4526D828)\n",
-    "\n",
-    "&emsp;&emsp;[DQ Robotics Example](#H_D7DA56B6)\n",
-    "\n",
-    "&emsp;[Vector-field inequalities: task-space collision avoidance](#H_4A689E93)\n",
-    "\n",
-    "&emsp;&emsp;[Keeping the robot entity outside of a restricted zone](#H_6C97B200)\n",
-    "\n",
-    "&emsp;&emsp;[Keeping the robot entity inside of a safe zone](#H_B67D71BB)\n",
-    "\n",
-    "&emsp;&emsp;[Square distances instead of distances](#H_B29A4585)\n",
-    "\n",
-    "&emsp;&emsp;[Distance Jacobians](#H_32955C9F)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Preliminaries](#H_FB89938D)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Line Jacobian](#H_685CD1F0)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Plane Jacobian](#H_801E5F87)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Point-to-point distance Jacobian](#H_678ECE9D)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Point-to-line distance Jacobian](#H_DDBF00C8)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Line-to-point distance Jacobian](#H_20D1E147)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Line-to-line distance Jacobian](#H_1E0F3D93)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Point-to-plane distance Jacobian](#H_DA7C4632)\n",
-    "\n",
-    "&emsp;&emsp;&emsp;[Plane-to-point distance Jacobian](#H_757ED165)\n",
-    "\n",
-    "&emsp;[Vector-field inequalities in action](#H_895E4487)\n",
-    "\n",
-    "&emsp;&emsp;[Preventing collision with walls](#H_8E230424)\n",
-    "\n",
-    "&emsp;&emsp;[Entry-sphere constraint](#H_D5D6F4BB)\n",
-    "\n",
-    "[Homework](#T_6E209DF5)\n",
-    "\n",
-    "<a name=\"endToc\"></a>\n",
-    "<a name=\"H_8AFFA90E\"></a>\n",
     "## Introduction\n",
     "\n",
     "In the last lesson, you learned the concept of task-space singularities and a particular way to address them.\n",
